# pomotui

./: .gitignore  LICENSE  README.md  __main__.py  app.py  models.py  pyproject.toml  requirements.txt  storage.py  styles.tcss  ui.py
pomotui/: app.py  styles.tcss  ui.py
